# gnomad2uniprot

./: .gitignore  01_gnomad2_uniprot_mapping.ipynb  01_gnomad2_uniprot_mapping.py  README.md  header.txt  pyproject.toml
